--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="lib/jquery-3.2.1.min.js"></script>
     <!-- Angular -->
     <script src="lib/angular.min.js"></script>
+    <script src="lib/underscore.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
     <script src="js/app.js"></script>
 </body>
